--- a/css/main.css
+++ b/css/main.css
@@ -351,6 +351,7 @@ img {
 
 .menu-soc {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .menu-soc__item {
@@ -493,7 +494,8 @@ img {
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
   padding: 40px;
-  width: 450px;
+  width: calc(100vw - 15px);
+  max-width: 450px;
   background: var(--primary-background-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
@@ -503,7 +505,7 @@ img {
 }
 @media screen and (min-width: 1200px) {
   .modal {
-    width: 528px;
+    max-width: 528px;
   }
 }
 
